--- a/configs/2d_deeponet_config.yaml
+++ b/configs/2d_deeponet_config.yaml
@@ -2,25 +2,27 @@ args:
     device: 'cuda:0'
     train_style: 'next_step' # 'fixed_future', 'rollout'
     #results_dir: './2D_ns_next_step/'
-    results_dir: './2D_ff_20/'
+    #results_dir: './2D_ff_20/'
+    results_dir: './new_large_diff_embed/'
 
-    split_style: 'equation'
-    #split_style: 'initial_condition'
+    #split_style: 'equation'
+    split_style: 'initial_condition'
 
-    train_style: 'next_step'
-    #train_style: 'fixed_future'
+    #train_style: 'next_step'
+    train_style: 'fixed_future'
+    embedding: 'None'
 
     num_workers: 0
     batch_size: 256
-    #initial_step: 10
-    initial_step: 1
+    initial_step: 10
+    #initial_step: 1
     rollout_length: 5
     t_train: 200
     validate: 1
     #data_name: '2d_ns_1s_256_4eq.h5'
-    #data_name: '2d_ns_30s_256_370eq.h5'
-    data_name: '2d_electric_100_60.h5'
-    base_path: './2D_NS_DATA/'
+    data_name: '2d_ns_30s_256_370eq.h5'
+    #data_name: '2d_electric_100_60.h5'
+    base_path: '/home/cooperlorsung/'
     return_text: True
     reduced_resolution: 4
     reduced_resolution_t: 1
@@ -28,27 +30,27 @@ args:
 
     # Optimizer
     learning_rate: 1.e-3
-    weight_decay: 1.e-8
+    weight_decay: 1.e-5
     scheduler_step: 100
     scheduler_gamma: 0.5
     #epochs: 1000
     #epochs: 50
-    epochs: 20
-    num_seeds: 2
+    epochs: 200
+    num_seeds: 5
 
     # Sim samples
     num_t: 64
-    #num_x: 64
-    #num_y: 64
-    num_x: 60
-    num_y: 100
-    sim_time: 999
-    num_samples: 100
-    #num_samples: 5000
+    num_x: 64
+    num_y: 64
+    #num_x: 60
+    #num_y: 100
+    sim_time: 80
+    #num_samples: 100
+    num_samples: 4000
 
     samples_per_equation: 1
 
-    branch_net: [1, 256, 256]
+    branch_net: [10, 256, 256]
     trunk_net: [2, 256, 256]
     activation: 'relu'
     kernel_initializer: 'Glorot normal'
