--- a/configs/2d_fno_config.yaml
+++ b/configs/2d_fno_config.yaml
@@ -1,11 +1,12 @@
 args:
     device: 'cuda:0'
-    results_dir: './clip_vit/'
+    #results_dir: './clip_vit/'
+    results_dir: './pretrained_clip_comparison/'
     #train_style: 'next_step'
     train_style: 'fixed_future'
     num_workers: 0
     batch_size: 32
-    pretraining_batch_size: 512
+    pretraining_batch_size: 128
     initial_step: 10
     #initial_step: 20
     #initial_step: 41
@@ -22,8 +23,13 @@ args:
     reduced_batch: 1
     #split_style: 'equation' # 'initial_condition' or 'equation'
     split_style: 'initial_condition' # 'initial_condition' or 'equation'
-    embedding: 'None'
+    #embedding: 'None'
+    embedding: 'clip'
+    #embedding: 'llm'
+    llm: 'all-MiniLM-L6-v2'
+    #llm: 'all-mpnet-base-v2'
     coeff: True
+    load_pretrained: True
 
     # CLIP
     embed_dim: 32
@@ -41,9 +47,11 @@ args:
 
     pretraining_learning_rate: 1.e-3
     pretraining_weight_decay: 1.e-4
-    pretraining_epochs: 0
+    #pretraining_epochs: 1000
+    pretraining_epochs: 100
 
     # Sim samples
+    im_size: 32
     num_t: 100
     #num_x: 64
     #num_y: 64
@@ -55,10 +63,9 @@ args:
     #sim_time: 120
     #sim_time: 999
 
-    #num_samples: 4
     num_samples: 100
-    #num_samples: 370
-    #num_samples: 5000
+    #num_samples: 500
+    #num_samples: 1000
     pretraining_num_samples: 10
 
     samples_per_equation: 1
@@ -72,5 +79,5 @@ args:
     dropout: 0.2
 
     # Tracking
-    log_freq: 10
-    progress_plot_freq: 10
+    log_freq: 1000
+    progress_plot_freq: 1000
