--- a/configs/2d_vit_config.yaml
+++ b/configs/2d_vit_config.yaml
@@ -9,7 +9,8 @@ args:
     train_style: 'fixed_future'
     clip: True
     coeff: True
-    pretraining_loss: 'weightedclip' # Or weightedclip or None
+    pretraining_loss: 'clip' # Or weightedclip or None
+    #pretraining_loss: 'weightedclip' # Or weightedclip or None
     llm: 'all-MiniLM-L6-v2'
     #llm: 'all-mpnet-base-v2'
 
