Switching back to ViT. Changed embedding to overlapping patches.

--- a/configs/2d_clip_pitt_config.yaml
+++ b/configs/2d_clip_pitt_config.yaml
@@ -8,7 +8,7 @@ args:
     results_dir: './test/'
 
     model: 'pitt' 
-    neural_operator: 'deeponet' # fno, oformer, deeponet
+    neural_operator: 'fno' # fno, oformer, deeponet
 
     #embedding: 'standard'
     #embedding: 'novel'
