--- a/configs/transolver_2d_config.yaml
+++ b/configs/transolver_2d_config.yaml
@@ -1,10 +1,13 @@
 args:
+    #TODO: Reorganize...
     device: 'cuda:0'
     #results_dir: './pdebench_vit_results/'
     #results_dir: './combined_pdebench_vit_results/'
     #results_dir: './overlap_combined_pdebench_transolver_results/'
     #results_dir: './test_transfer/'
-    results_dir: './normalize_leterrip_results_transfer/'
+    #results_dir: './normalize_leterrip_results_transfer/'
+    #results_dir: './normalize_leterrip_results_transfer/'
+    results_dir: './attempt_at_stable_results/'
 
     base_path: '/home/cooperlorsung/'
     #pretrained_model_path: "./AS_PRETRAINED_VITS/"
@@ -66,8 +69,8 @@ args:
     #  Choose pretraining/finetuning strategy
     ###
     pretraining: 'clip' # Or transfer...
-    #transfer: True
-    transfer: False
+    transfer: True
+    #transfer: False
 
     pretraining_loss: 'clip'
     #pretraining_loss: 'weightedclip' # Or weightedclip or None
@@ -103,8 +106,8 @@ args:
     #epochs: 1000
     #epochs: 1
     #epochs: 5
-    epochs: 500
-    #epochs: 2000
+    #epochs: 500
+    epochs: 100
     num_seeds: 1
 
     # Pretraining optimizer
@@ -121,12 +124,12 @@ args:
 
     # ViT Parameters
     #img_size: 128    # Note: Setting img_size overrides reduced_resolution
-    img_size: 64
+    img_size: 128
     #img_size: 32
 
     patch_size: 8
     patch_stride: 8 # Works if stride >= patch_size/2? Not exactly sure...
-    dim: 64
+    dim: 128
     depth: 3
     heads: 8
     mlp_dim: 128
